[package]
name = "tendermock"
version = "0.1.0"
authors = ["CharlyCst <castes.ch@gmail.com>"]
edition = "2018"

[[bin]]
name = "tendermock"
path = "src/bin/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost-types = "0.7"
prost = "0.7"
# Servers (JsonRPC, gRPC, Websocket)
tonic = "0.4"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3.8"
# CLI utilities
colored = "2"
chrono = "0.4"
# Other
ics23 = "0.6.0"
sha2 = "0.9.2"
hex = "0.4.2"

# The `ibc-rs` repo didn't activate tonic server definition
# In the meanwhile we rely on a dev branch
ibc = { git = "https://github.com/informalsystems/ibc-rs", branch = "adi/tonic-server" }
ibc-proto = { git = "https://github.com/informalsystems/ibc-rs", branch = "adi/tonic-server" }

tendermint = "=0.19.0"
tendermint-testgen = "=0.19.0"
tendermint-rpc = "=0.19.0"
tendermint-proto = "=0.19.0"
tendermint-light-client = "=0.19.0"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "suggestions", "derive", "std" ]
